# N8N

./: .gitignore  AUTOMATION_SCRIPTS_GUIDE.md  CURRENT_TIMESTAMP.md  DEVELOPER_HANDOFF.md  DOCUMENTATION_INDEX.md  ELEVENLABS_INTEGRATION_GUIDE.md  FOLDER_STRUCTURE_GUIDE.md  FRONTEND_BACKEND_INTEGRATION_GUIDE.md  FRONTEND_UI_SPECIFICATIONS.md  FUTURE_VERSION_MANAGEMENT.md  GENSPARK_UI_DESIGN_PROMPT.md  GITHUB_NAVIGATION.md  INSTALLATION_GUIDE.md  Master_Template  PRODUCTION_USER_GUIDE.md  QUICK_REFERENCE_CARD.md  README.md  TEXT_PROCESSOR_UI_INTEGRATION.md  UI_VARIABLES_SUMMARY.md  VERSIONING_STRATEGY.md  json2video_template_fixed.json  pyproject.toml  requirements-core.txt  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py
-p/biblical_text_processorv2/: Input  MAIN_README.md  Output  README.md  biblical_text_processor_v2.py  requirements.txt
Archive/Legacy_Workflows/: Master_Long_Form.json  README.md  master2.json  master2_backup.json
Archive/Legacy_Workflows/Version_6_Archive/: Version6n8n.json
Bible_Chapter_Videos/: 4_MINUTE_VIDEO_OPTIMIZATION_GUIDE.md  DEVELOPMENT_ROADMAP.md  HANDOVER_COMPLETE.md  Input  PHASE_TRACKER.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PROJECT_OVERVIEW.md  QUICK_START_GUIDE.md  README.md  SYSTEM_ARCHITECTURE.md  TESTING_RESULTS.md  TESTING_STRATEGY.md  processed_biblical_text_982words.txt  requirements.txt
Bible_Chapter_Videos/data/: README.md
Bible_Chapter_Videos/logs/: README.md
Bible_Chapter_Videos/src/: README.md
Bible_Chapter_Videos/templates/: README.md
Bible_Chapter_Videos/tests/: BibleWorkflowv3.json
Final/: FinalMaster.json
Final/Template/: Main
RELEASES/v2.1.0/: BibleChapterMaster-v2.1.0.json  BibleChapterTemplate-v2.1.0.json  RELEASE_NOTES_v2.1.0.md  biblical_text_processor-v1.1.0.py
RELEASES/v3.0.0/: BHI-Template-v3.0.0.json  CHANGELOG_v3.0.0.md  RELEASE_NOTES_v3.0.0.md
RELEASES/v5.0.0/: CHANGELOG_v5.0.0.md  ElevenLabs-Template-v5.0.0.json  RELEASE_NOTES_v5.0.0.md
RELEASES/v5.1.0/: CHANGELOG_v5.1.0.md  DEPLOYMENT_GUIDE_v5.1.0.md  ElevenLabs-Template-v5.1.0.json  RELEASE_NOTES_v5.1.0.md
Version 4/: Workflow
Version 5 - ElevenLabs Single Scene/: README.md  Workflowv5_2scene
Version 5.1 - ElevenLabs 20-Scene Production/: README.md  Workflowv5.1_20scene
Versions/: README.md
make.com/: Short Master working6242025.blueprint.json
n8n/: DOCUMENTATION_INDEX.md  LongForm_Master_Workflow.json  final.json
scale/: README.md  ScaleMD.md  ScaleMaster.json  ScaleTemplate.json
